--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 
         <!-- Basic Info
         ======================================================================== -->
-        <title>Сайт</title>
+        <title>404!</title>
         <meta charset="utf-8">
         <meta name="author" content="www.lazukin.net">
         <meta name="robots" content="index, follow">
