--- a/О нас.html
+++ b/О нас.html
@@ -7,7 +7,7 @@
 
         <!-- Basic Info
         ======================================================================== -->
-        <title>Турагенство Барбариска</title>
+        <title>Турагентство Барбариска</title>
         <meta charset="utf-8">
         <meta name="author" content="www.lazukin.net">
         <meta name="robots" content="index, follow">
