--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
                                                     <img src="images/uploads/—Pngtree—image of berberis vector or_5274617.png" alt="LPB Logo" style="border-radius: 0px;">
                                                 </a><!-- /End Logo -->
 
+                                                <p><img src="images/uploads/LikelyFoolishIchneumonfly-size_restricted.gif" alt="Морген" width="250" height="444"></p>
+
                                                 <!-- Toggle Menu Button -->
                                                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                                                     Menu <span><i class="lines"></i></span>
