--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
 
                                     <!-- Description -->
                                     <div class="testimonials-block-desc">
+                                        <p><img src="images/uploads/LikelyFoolishIchneumonfly-size_restricted.gif" alt="Морген" width="100" height="222"></p>
                                         <p>Отличный отел в Абхазии. Я его даже бы и не нашёл если бы ни этот сайт. Довольно дешево за такой тур. Есть зона для детей , до пляжа не долго идти. Есть где походить.</p>
                                     </div><!-- /End Description -->
 
