--- a/index.html
+++ b/index.html
@@ -224,8 +224,6 @@
                                                     <img src="images/uploads/—Pngtree—image of berberis vector or_5274617.png" alt="LPB Logo" style="border-radius: 0px;">
                                                 </a><!-- /End Logo -->
 
-                                                <p><img src="images/uploads/LikelyFoolishIchneumonfly-size_restricted.gif" alt="Морген" width="1500" height="444"></p>
-
                                                 <!-- Toggle Menu Button -->
                                                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                                                     Menu <span><i class="lines"></i></span>
@@ -390,6 +388,11 @@
                                     <!-- Description -->
                                     <div class="testimonials-block-desc">
                                         <p><img src="images/uploads/LikelyFoolishIchneumonfly-size_restricted.gif" alt="Морген" width="100" height="222"></p>
+<style>
+   .testimonials-block-desc {
+    text-align: center; /* Выравнивание по центру */ 
+   }
+  </style>
                                         <p>Отличный отел в Абхазии. Я его даже бы и не нашёл если бы ни этот сайт. Довольно дешево за такой тур. Есть зона для детей , до пляжа не долго идти. Есть где походить.</p>
                                     </div><!-- /End Description -->
 
