--- a/index.html
+++ b/index.html
@@ -387,18 +387,12 @@
 
                                     <!-- Description -->
                                     <div class="testimonials-block-desc">
-                                        <p><img src="images/uploads/LikelyFoolishIchneumonfly-size_restricted.gif" alt="Морген" width="100" height="222"></p>
-<style>
-   .testimonials-block-desc {
-    text-align: center; /* Выравнивание по центру */ 
-   }
-  </style>
-                                        <p>Да я богатый уёбок</p>
+                                        <p>Отличный отел в Абхазии. Я его даже бы и не нашёл если бы ни этот сайт. Довольно дешево за такой тур. Есть зона для детей , до пляжа не долго идти. Есть где походить.</p>
                                     </div><!-- /End Description -->
 
                                     <!-- Title -->
                                     <div class="testimonials-block-title">
-                                        <h4>Никита Сухопаров</h4><h4 style="color: rgb(241, 194, 50); font-size: 18px; font-weight: 600;" src="images/uploads/pesok-more-volny-pliazh-leto-shezlong-summer-beach-sea-blue.jpg">
+                                        <h4>Никита</h4><h4 style="color: rgb(241, 194, 50); font-size: 18px; font-weight: 600;" src="images/uploads/pesok-more-volny-pliazh-leto-shezlong-summer-beach-sea-blue.jpg">
                                             <r4 data-selector="r4" style="">★ ★ ★ ★ ★<r4>
                                     </r4></r4></h4></div><!-- /End Title -->
 
