--- a/Заказ.html
+++ b/Заказ.html
@@ -320,7 +320,7 @@
                                                     </li>
 
                                                     <li style="">
-                                                        <a href="#contact-section-1" title="Контакты" style="color: rgb(18, 18, 18); font-size: 14px; font-weight: 500;" src="images/uploads/pesok-more-volny-pliazh-leto-shezlong-summer-beach-sea-blue.jpg">Контакты</a>
+                                                        <a href="index.html#contact-section-1"; title="Контакты" style="color: rgb(18, 18, 18); font-size: 14px; font-weight: 500;" src="images/uploads/pesok-more-volny-pliazh-leto-shezlong-summer-beach-sea-blue.jpg">Контакты</a>
                                                     </li>
                                                     
                                                     <li style="">
