--- a/Команда.html
+++ b/Команда.html
@@ -237,7 +237,7 @@
                                     <div class="info-block">
                                         <!-- Info Block Container -->
                                         <div class="info-block-container">
-                                            <a href="tel:+11234567890" title="+7 (812) 389-36-50" class="main-link">
+                                            <a href="tel:+9818733570" title="+7 (981) 873-35-70" class="main-link">
 
                                                 <!-- Icon -->
                                                 <i class="fa fa-phone circle-icon-block circle-icon-block-sm"></i>
@@ -254,7 +254,7 @@
                                     <div class="info-block">
                                         <!-- Info Block Container -->
                                         <div class="info-block-container">
-                                            <a href="mailto:ваша-почта@mail.ru" title="ваша-почта@mail.ru" class="main-link">
+                                            <a href="mailto:barbariska.tour@mail.ru" title="barbariska.tour@mail.ru" class="main-link">
 
                                                 <!-- Icon -->
                                                 <i class="fa fa-envelope circle-icon-block circle-icon-block-sm"></i>
