--- a/Купить билеты.html
+++ b/Купить билеты.html
@@ -211,13 +211,13 @@
                                     <div class="info-block">
                                         <!-- Info Block Container -->
                                         <div class="info-block-container">
-                                            <a href="tel:+11234567890" title="+7 (812) 389-36-50" class="main-link">
+                                            <a href="tel:+79818733570" title="+7 (981) 873-35-70" class="main-link">
 
                                                 <!-- Icon -->
                                                 <i class="fa fa-phone circle-icon-block circle-icon-block-sm"></i>
 
                                                 <!-- Description -->
-                                                <p>+7 (812) 389-36-50</p>
+                                                <p>+7 (981) 873-35-70</p>
 
                                             </a>
                                         </div><!-- /End Info Block Container -->
@@ -228,7 +228,7 @@
                                     <div class="info-block">
                                         <!-- Info Block Container -->
                                         <div class="info-block-container">
-                                            <a href="mailto:ваша-почта@mail.ru" title="ваша-почта@mail.ru" class="main-link">
+                                            <a href="mailto:barbariska.tour@mail.ru" title="barbariska.tour@mail.ru" class="main-link">
 
                                                 <!-- Icon -->
                                                 <i class="fa fa-envelope circle-icon-block circle-icon-block-sm"></i>
