--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                                 <i class="fa fa-phone circle-icon-block circle-icon-block-sm"></i>
 
                                                 <!-- Description -->
-                                                <p>+7 (812) 389-36-50</p>
+                                                <p>+7 (981) 873-35-70</p>
 
                                             </a>
                                         </div><!-- /End Info Block Container -->
@@ -181,7 +181,7 @@
                                     <div class="info-block">
                                         <!-- Info Block Container -->
                                         <div class="info-block-container">
-                                            <a href="mailto:slava_s_123@mail.ru" title="slava_s_123@mail.ru" class="main-link">
+                                            <a href="mailto:barbariska.tour@mail.ru" title="barbariska.tour@mail.ru" class="main-link">
 
                                                 <!-- Icon -->
                                                 <i class="fa fa-envelope circle-icon-block circle-icon-block-sm"></i>
