--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                                         </div><!-- /End Info Block Container -->
                                     </div><!-- /End Info Block -->
 
+		                <p><img src="images/uploads/anim.gif" alt="Anim" width="1000" height="200"></p
 
                                 </div><!-- /End col-md-6 -->
 
